[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scripts/firstpersoncamera.gd" type="Script" id=2]
[ext_resource path="res://models/shotgun.scn" type="PackedScene" id=3]
[ext_resource path="res://models/player.scn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]

radius = 0.7
height = 0.6

[sub_resource type="RayShape" id=2]

length = 1.0

[node name="player" type="RigidBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 2
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.2, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 2.0
custom_integrator = true
continuous_cd = false
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = false
axis_lock = 0
velocity/linear = Vector3( 0, 0, 0 )
velocity/angular = Vector3( 0, 0, 0 )
damp_override/linear = 0.0
damp_override/angular = 0.0
script/script = ExtResource( 1 )

[node name="bounds" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.2, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ray" type="CollisionShape" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="head" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0 )
script/script = ExtResource( 2 )

[node name="camera" type="Camera" parent="head"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
projection = 0
fov = 70.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="shoot_pos" type="Position3D" parent="head"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.1, -0.9 )

[node name="weapon" parent="head" instance=ExtResource( 3 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0999999, 0 )

[node name="player_model" parent="." instance=ExtResource( 4 )]

[node name="player_shadow" parent="." instance=ExtResource( 4 )]


